# galois_field_arithmetic

./: .gitignore  CMakeLists.txt
src/: field.cpp  field_arithmetic.hpp  field_element.cpp
test/: benchmark.cpp  corr_test.cpp  driver.cpp
